--- a/Windows/Register/defaults.css
+++ b/Windows/Register/defaults.css
@@ -179,6 +179,11 @@ table
     {
         font-weight: bold;
     }
+    
+    .error 
+    {
+        border: 2px solid red;
+    }
 }
 
 @media print
